# calix

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
Formula/: calix.rb
flatpak/: com.ianswope.Calix.json
packaging/aur/: PKGBUILD
scripts/: build-release.sh  generate-flatpak-sources.sh  install-local.sh  uninstall-local.sh
src/: caldav.rs  calendar_dialog.rs  config.rs  date_util.rs  event_dialog.rs  main.rs  notify.rs  omarchy.rs  recurrence.rs  store.rs  style.rs  sync.rs  window.rs
src/google/: calendar_api.rs  mod.rs  oauth.rs  sync.rs
src/icloud/: caldav.rs  credentials.rs  mod.rs  sync.rs
src/views/: drag.rs  event_widget.rs  mod.rs  month_view.rs  week_view.rs
