[package]
name = "calix"
version = "0.2.0"
edition = "2024"

[dependencies]
adw = { version = "0.9.2", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_14"] }
chrono = "0.4"
chrono-tz = "0.10"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
serde_json = "1.0.150"
url = "2.5.8"
keyring = { version = "4.1.4", default-features = false, features = ["v1", "zbus-secret-service-keyring-store"] }
